# mcp-server-yahoo-finance

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  client.py  main.py  pyproject.toml  start.sh  yahoo_finance.py
images/: .~lock.chat_interface.png#
templates/: index.html
