[project]
name = "mcp-yahoo-finance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "mcp>=1.6.0",
    "openai>=1.74.0",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.1",
    "yfinance>=0.2.55",
]
